--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.2",
     "react-howler": "^5.2.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-scroll-parallax": "^3.0.3",
     "reactfire": "^4.2.1",
     "typescript": "^4.5.5",
