--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-howler": "^3.7.3",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.6.7",
+    "firebase": "^9.6.8",
     "howler": "^2.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-scroll-parallax": "^3.0.3",
+    "react-toastify": "^8.2.0",
     "reactfire": "^4.2.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
