--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
@@ -26,6 +27,7 @@
     "react-scroll-parallax": "^3.0.3",
     "react-toastify": "^8.2.0",
     "reactfire": "^4.2.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
