--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-howler": "^3.7.3",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
     "howler": "^2.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-howler": "^5.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
