--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-howler": "^3.7.3",
+    "@types/react-table": "^7.7.10",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-scroll-parallax": "^3.0.3",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "reactfire": "^4.2.1",
     "tslib": "^2.3.1",
