--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reactfire": "^4.2.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
+    "use-timer": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
